# PyDomainExtractor

./: .gitignore  Cargo.toml  LICENSE  MANIFEST.in  README.md  cortex.yaml  pyproject.toml  setup.py
.github/workflows/: build.yml  deploy.yml  pythonpackage.yml
benchmarks/: domain_benchmark.py  url_benchmark.py
pydomainextractor/: __init__.py  pydomainextractor.pyi
src/: extractor.cpp  lib.rs  public_suffix_list.h  pydomainextractor.cpp  pydomainextractor.cpp.orig
src/PyDomainExtractor/: public_suffix_list.h  pydomainextractor.cpp
src/tsl/: robin_growth_policy.h  robin_hash.h  robin_map.h  robin_set.h
tests/: test_pydomainextractor.py  test_tldextract.py
