[package]
name = "pydomainextractor"
version = "0.13.9"
authors = ["Viktor Vilskyi <viktor_vilskyi@rapid7.com>"]
edition = "2021"
repository = "https://github.com/intsights/pydomainextractor"
homepage = "https://github.com/intsights/pydomainextractor"
license = "MIT"
keywords = [
    "domain",
    "extraction",
    "tld",
    "suffix",
    "psl",
    "rust",
    "pyo3",
]

[lib]
name = "pydomainextractor"
crate-type = ["cdylib"]

[dependencies]
ahash = "0.8"
idna = "0.3"
memchr = "2"
arraystring = "0.3.0"
typenum = "1"
libc = "0.2"

[dependencies.pyo3]
version = "0.20.3"
features = ["extension-module"]

[profile.release]
lto = true
panic = "abort"
