[project]
name = "pydomainextractor"
version = "0.13.2"
description = "A blazingly fast domain extraction library written in Rust"
authors = [
  {email = "gal@intsights.com"},
  {name = "Gal Ben David"}
]
requires-python = ">=3.7"
license = {file = "LICENSE"}
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: Microsoft",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Rust",
]

[project.urls]
repository = "https://github.com/intsights/pydomainextractor"
homepage = "https://github.com/intsights/pydomainextractor"

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[tool.maturin]
sdist-include = [
    "Cargo.toml",
    "pydomainextractor/*.py",
    "pydomainextractor/*.pyi",
    "pyproject.toml",
    "src/*",
]

[tool.poetry]
name = "pydomainextractor"
version = "0.12.0"
authors = ["Gal Ben David <gal@intsights.com>"]
description = "A blazingly fast domain extraction library written in Rust"
readme = "README.md"
repository = "https://github.com/intsights/pydomainextractor"
homepage = "https://github.com/intsights/pydomainextractor"
license = "MIT"
keywords = [
    "domain",
    "extraction",
    "tld",
    "suffix",
    "psl",
    "rust",
    "pyo3",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Rust",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "*"
wheel = "*"
pytest-runner = "*"
maturin = "*"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "--tb=native",
    "--pythonwarnings=all",
]
testpaths = [
    "tests",
]